# monitoring_dashboard

./: .gitignore  README.md  start-services.bat  start-services.sh  stop-services.sh
go-orchestrator/: .service_pids  main.go
py-detector/: .service_pids  app.py  requirements.txt
rust-hw-metrics/: Cargo.toml
rust-hw-metrics/src/: main.rs
web-dashboard/: .service_pids  index.html
web-dashboard/css/: styles.css
web-dashboard/js/: charts.js  config.js  main.js  utils.js
