[package]
name = "rust-hw-metrics"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sysinfo = "0.29.0"  # For system information collection
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
actix-cors = "0.6.4"  # For CORS support 